--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "node-addon-api": "^8.0.0"
+    "node-addon-api": "^8.0.0",
+    "open": "^10.1.0"
   }
 }
